--- a/src/app/seller-auth/seller-auth.component.html
+++ b/src/app/seller-auth/seller-auth.component.html
@@ -3,4 +3,5 @@
     <input #email ngModel placeholder="Enter Your Email"  name="email" type="email">
     <input #password ngModel placeholder="Enter Your Password"  name="password" type="password">
     <button type="submit">Login</button>
+    <a routerLink="/app-seller-home">Go to login form</a>
 </form>
