--- a/src/app/seller-home/seller-home.component.html
+++ b/src/app/seller-home/seller-home.component.html
@@ -1,1 +1,6 @@
-<p>seller-home works!qqqq</p>
+<form class="myform"  #myform="ngForm" (ngSubmit)="login(myform.value)">
+    
+    <input #email ngModel placeholder="Enter Your Email"  name="email" type="email">
+    <input #password ngModel placeholder="Enter Your Password"  name="password" type="password">
+    <button type="submit">Login</button>
+</form>
