--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -5,9 +5,11 @@
         <button>Search</button>
     </div>
     <ul>
-        <li><a routerLink="/">Home</a></li>
+        <li><a routerLink="/app-home">Home</a></li>
         <li><a routerLink="#">Login</a></li>
+        <button (click)="logout()">Logout</button>
         <li><a routerLink="#">Register</a></li>
         <li><a routerLink="/app-seller-auth">Seller Auth</a></li>
+        <li><a routerLink="/app-add-product">Add product</a></li>
     </ul>
 </div>
