--- a/src/app/seller-auth/seller-auth.component.html
+++ b/src/app/seller-auth/seller-auth.component.html
@@ -1,7 +1,7 @@
 <form class="myform"  #myform="ngForm" (ngSubmit)="signUp(myform.value)">
-    <input #name ngModel placeholder="Enter Your Name"  name="name" type="text">
-    <input #email ngModel placeholder="Enter Your Email"  name="email" type="email">
-    <input #password ngModel placeholder="Enter Your Password"  name="password" type="password">
+  
+    <input  ngModel placeholder="Enter Your Email"  name="email" type="email">
+    <input  ngModel placeholder="Enter Your Password"  name="password" type="password">
     <button type="submit">Login</button>
-    <a routerLink="/app-seller-home">Go to login form</a>
+    <a routerLink="/app-seller-home">Go to Register form</a>
 </form>
